finish third test